--- a/main.css
+++ b/main.css
@@ -44,6 +44,9 @@ body {
 #kop ul li:hover{
     background-color: #418AC9;
 }
+#kop ul li:hover{
+    background-color: #418FC9;
+}
 #sociaal{
     right: 0px;
     position: absolute;
