color social changed

--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ body {
 #sociaal a{
      display: inline-block;
     /* position: absolute; */
-    background: #F1991F;
+    background: #D0FEFF;
     width: 40px;
     border-radius: 100%;
     height: 40px;
