changed color border bottom

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
  background-color: #40E0D0;
  height:50px;
  width:960px;
- border-bottom: solid 33px #418AC9;
+ border-bottom: solid 33px #1C75BC;
 }
 #kop ul{
     display: block;
