changed color kop

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
 #kop {
  position: relative;
  padding:30px;
- background-color: #40E0D0;
+ background-color: #069CA4;
  height:50px;
  width:960px;
  border-bottom: solid 33px #1C75BC;
