--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ body {
  padding:10px;
  height:30px;
  width:1000px;
- background-color:#069CA4;
+ background-color:#acf8f9;
  float:left;} 
       
 #inhoud {
