--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ body {
 #sociaal a{
      display: inline-block;
     /* position: absolute; */
-    background: #D0FEFF;
+    background: #7eeff7;
     width: 40px;
     border-radius: 100%;
     height: 40px;
@@ -66,7 +66,7 @@ body {
     margin-right: 10px;
 }
 #sociaal a:hover{
-    background: #F1991F;
+    background: #1C75BC;
 }
       
 #logo {
